Hyperlink dan Gambar

--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
     <p>Saat ini saya sedang menempuh semester keempat di jurusan Ilmu Komputer. Saya mengambil kursus tentang 
         dasar-dasar pengembangan web untuk meningkatkan keterampilan saya dalam bidang ini
     </p>
+
+    <h2>Kontak Saya</h2>
+    <p>Anda dapat menghubungi saya melalui email di <a href="christianptrii@gmail.com">christianptrii@gmail.com</a>.</p>
+
+    <h2>Proyek Terakhir</h2>
+    <p>Berikut adalah proyek terakhir yang telah saya kerjakan:</p>
+    <img src="img/project.png" alt="Med Space Prototype">
+
+    <p>Untuk informasi lebih lanjut, kunjungi <a href="https://www.google.com/" target="_blank">Website saya</a>.</p>
 </body>
 </html>
