--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Struktur HTML -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,8 @@
     <title>Praktikum HTML</title>
 </head>
 <body>
+
+    <!-- Tag Judul & Paragraf -->
     <h1>Profil Mahasiswa</h1>
 
     <h2>Biografi</h2>
@@ -19,6 +22,7 @@
         dasar-dasar pengembangan web untuk meningkatkan keterampilan saya dalam bidang ini
     </p>
 
+    <!-- Hyperlink & Gambar -->
     <h2>Kontak Saya</h2>
     <p>Anda dapat menghubungi saya melalui email di <a href="christianptrii@gmail.com">christianptrii@gmail.com</a>.</p>
 
@@ -27,5 +31,20 @@
     <img src="img/project.png" alt="Med Space Prototype">
 
     <p>Untuk informasi lebih lanjut, kunjungi <a href="https://www.google.com/" target="_blank">Website saya</a>.</p>
+
+    <!-- List -->
+    <h2>Hobi saya</h2>
+    <ul>
+        <li>Membaca</li>
+        <li>Bersepeda</li>
+        <li>Fotografi</li>
+    </ul>
+
+    <h2>Riwayat Pendidikan</h2>
+    <ol>
+        <li>SD Negeri XYZ</li>
+        <li>SMP Negeri ABC</li>
+        <li>SMA Negeri 123</li>
+    </ol>
 </body>
 </html>
