--- a/index.html
+++ b/index.html
@@ -46,5 +46,29 @@
         <li>SMP Negeri ABC</li>
         <li>SMA Negeri 123</li>
     </ol>
+
+    <!-- Tabel -->
+    <table border="1">
+        <tr>
+            <th>Hari</th>
+            <th>Mata Kuliah</th>
+            <th>Waktu</th>
+        </tr>
+        <tr>
+            <td>Senin</td>
+            <td>Pemrograman Web</td>
+            <td>08:00 - 10:00</td>
+        </tr>
+        <tr>
+            <td>Selasa</td>
+            <td>Basis Data</td>
+            <td>08:00 - 09:45</td>
+        </tr>
+        <tr>
+            <td>Rabu</td>
+            <td>Internet of Things</td>
+            <td>10:00 - 12:20</td>
+        </tr>
+    </table>
 </body>
 </html>
