--- a/index.html
+++ b/index.html
@@ -70,5 +70,20 @@
             <td>10:00 - 12:20</td>
         </tr>
     </table>
+
+    <!-- Formulir -->
+    <h2>Formulir Kontak</h2>
+    <form action="submit_form.php" method="POST">
+        <label for="name">Nama Lengkap:</label>
+        <input type="text" id="name" name="fullname" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="emailaddr" required><br><br>
+
+        <label for="message">Pesan:</label>
+        <textarea name="usermessage" id="message" rows="4"required></textarea><br><br>
+
+        <button type="submit">Kirim</button>
+    </form>
 </body>
 </html>
