Hyperlink dan Gambar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <h2>Proyek Terakhir</h2>
     <p>Berikut adalah proyek terakhir yang telah saya kerjakan:</p>
-    <img src="img/project.png" alt="Med Space Prototype">
+    <img src="img/project.png" alt="Med Space Prototype" width="250px" height="250px">
 
     <p>Untuk informasi lebih lanjut, kunjungi <a href="https://www.google.com/" target="_blank">Website saya</a>.</p>
 
