Langkah 2 - Paragraf, Gambar dan Link

--- a/biodata.html
+++ b/biodata.html
@@ -7,5 +7,72 @@
     <title>Biodata</title>
 </head>
 <body>
-    
+    <h1>Christian Putri</h1>
+    <p>Hello, I’m Christian Putri, an Information Technology student with an interest 
+        in graphic design, creative industries and UI/UX design. <br> 
+        I have been working as a graphic designer for organizations and individual projects 
+        for a total of 2 years.
+    </p>
+    <img src="img/profile.jpg" alt="Foto Profile" width="250px" height="250px" border-radius="50"><br>
+
+    <p>You can contact me on
+        <a href="https://www.instagram.com/christianptri/">my instagram account</a>
+    </p><br>
+
+    <p><b>Riwayat Pendidikan</b></p>
+    <table border="1">
+        <tr>
+            <th>Jenjang</th>
+            <th>Nama Institusi</th>
+            <th>Tahun</th>
+        </tr>
+        <tr>
+            <td>Perguruan Tinggi</td>
+            <td>Pendidikan Nasional University</td>
+            <td>2022 - present</td>
+        </tr>
+        <tr>
+            <td>Sekolah Menengah Kejuruan</td>
+            <td>SMK TI Bali Global Badung</td>
+            <td>lorem ipsum</td>
+        </tr>
+        <tr>
+            <td>Sekolah Menengah Pertama</td>
+            <td>SMP 2 Negeri Badung</td>
+            <td>lorem ipsum</td>
+        </tr>
+        <tr>
+            <td>Sekolah Dasar</td>
+            <td>SD No 6 Dalung</td>
+            <td>lorem ipsum</td>
+        </tr>
+    </table><br> 
+
+    <h2>Hobi</h2>
+    <ul>
+        <li>Membaca</li>
+        <li>Bersepeda</li>
+        <li>Fotografi</li>
+    </ul>
+
+    <h2>Riwayat Pendidikan</h2>
+    <ol>
+        <li>SD Negeri XYZ</li>
+        <li>SMP Negeri ABC</li>
+        <li>SMA Negeri 123</li>
+    </ol><br>
+
+    <h2>Formulir Kontak</h2>
+    <form action="submit_form.php" method="POST">
+        <label for="name">Full Name:</label>
+        <input type="text" id="name" name="fullname" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="emailaddr" required><br><br>
+
+        <label for="message">Message:</label>
+        <textarea name="usermessage" id="message" rows="4"required></textarea><br><br>
+
+        <button type="submit">Send</button>
+    </form>
 </body>
