--- a/biodata.html
+++ b/biodata.html
@@ -48,4 +48,18 @@
         </tr>
     </table><br> 
 
+    <h2>Hobi</h2>
+    <ul>
+        <li>Membaca</li>
+        <li>Bersepeda</li>
+        <li>Fotografi</li>
+    </ul>
+
+    <h2>Riwayat Pendidikan</h2>
+    <ol>
+        <li>SD Negeri XYZ</li>
+        <li>SMP Negeri ABC</li>
+        <li>SMA Negeri 123</li>
+    </ol><br>
+
 </body>
