--- a/biodata.html
+++ b/biodata.html
@@ -62,4 +62,17 @@
         <li>SMA Negeri 123</li>
     </ol><br>
 
+    <h2>Formulir Kontak</h2>
+    <form action="submit_form.php" method="POST">
+        <label for="name">Full Name:</label>
+        <input type="text" id="name" name="fullname" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="emailaddr" required><br><br>
+
+        <label for="message">Message:</label>
+        <textarea name="usermessage" id="message" rows="4"required></textarea><br><br>
+
+        <button type="submit">Send</button>
+    </form>
 </body>
